fixed overflow/spacing issues

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,6 +19,7 @@ body {
   align-items: center;
   min-height: 100vh;
   padding: 1rem;
+  overflow: hidden;
 }
 
 body::before,
@@ -107,6 +108,7 @@ body::after {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   max-width: 500px;
   width: 100%;
+  margin: 20px;
 }
 
 .form-field {
@@ -158,6 +160,11 @@ button:hover {
   background-color: #0056b3;
 }
 
+input:focus, select:focus {
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
 /* For tablet and mobile */
 @media (max-width: 768px) {
   .form-container {
@@ -165,19 +172,11 @@ button:hover {
   }
 }
 
-.flex-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* Optional: Center items horizontally */
-  justify-content: center; /* Optional: Center items vertically */
-  gap: 20px; /* Optional: Add spacing between items */
-}
-
 #svg-container {
   display: flex;
   gap: 20px;
   margin-bottom: 20px;
-  scale: 0.8;
+  transform: scale(0.8);
   justify-content: center; /* Horizontally center the SVGs */
   align-items: center; /* Vertically center the SVGs */
 }
